Fix svg overflow

--- a/flask_menger/static/menger/css/menger.css
+++ b/flask_menger/static/menger/css/menger.css
@@ -72,6 +72,7 @@ td.group, th.group {
     float: left;
     background-color: whitesmoke;
     margin-bottom: 20px; /* magically remove the scrollbar on parent */
+    padding-bottom: 10px; /* svg sometimes overflows */
     border-radius: 10px;
     border: 5px solid white;
 }
